--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  max-width: 100%; /* Changed from 1280px to 100% */
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
@@ -23,3 +23,4 @@ a,
 
 @media (min-width: 1024px) {
 }
+
